# python-project-template

./: LICENSE  README.md  pylintrc  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: make.bat
docs/src/: build.md  conf.py  index.md  installation.md  introduction.md  support.md
